traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:11: error: ';' expected but identifier found.
  }ligne(y)
   ^